infra/deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: nestjs-service
spec:
  type: ClusterIP
  selector:
    app: nestjs-deployment
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nestjs-deployment
spec:
  replicas: 4
  selector:
    matchLabels:
      app: nestjs-deployment
  template:
    metadata:
      labels:
        app: nestjs-deployment
    spec:
      containers:
        - name: nestjs
          image: hellomean/nestjs:auth
          ports:
            - containerPort: 3000
