infra/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nestjs-k9s-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - localhost
    secretName: localhost-tls-secret
  rules:
  - host: localhost
    http:
      paths:
      - path: "/user"
        pathType: Prefix
        backend:
          service:
            name: nestjs-service
            port:
              number: 3000
